--- a/plonetheme/simplecolor/skins/plonetheme_simplecolor_styles/mediaqueries.css
+++ b/plonetheme/simplecolor/skins/plonetheme_simplecolor_styles/mediaqueries.css
@@ -1,66 +1,70 @@
 /*MOBILE STYLES*/
 /* 1. Max width 1000px */
-/* 2. Max width 800px */
+/* 2. Max width 900px */
 /* 3. Max width 600px */
 
-
 /* 1. Max width 1000px */
-@media only screen and  (max-device-width: 1000px),(max-width : 1000px) {
+@media only screen and (max-device-width: 1000px), (max-width: 1000px) {
+    #headcoursetitle h2{       
+        font-size:1.4em;
+        }
+        
+    #headcoursetitle {
+	margin-left:1.5em;
+	}
+	
+	#collegeof{
+        font-size:.6em;
+    }
+	
+    #liberalarts{
+        font-size:1.5em;
+    }
+}
 
-	#portal-top{
-    background-image:none;
+/* 2. Max width 900px */
+@media only screen and (max-device-width: 900px), (max-width: 900px) {
+
+        #portal-top{
+        background-image:none;
 	}
+
 	#headcoursetitle {
-	margin-left:.9em;
+	margin-left:2em;
 	}
+
+	#headcoursetitle h2{       
+        font-size:1.5em;
+        }
 	
 	#titlebox{
 	width:100%;
 	margin-bottom:3px;
 	}
 	
-	#portal-siteactions{
-	float:left;
-	margin-left:4px;
-	}
-	
-	#portal-searchbox{
-    clear:none;
-    margin-bottom:2px;
-    }
-
-}/*END WIDTH 1000PX*/
-
-
-/* 2. Max width 800px */
-@media only screen and (max-device-width: 800px), (max-width : 800px) {
-	#psulogo{
+       #psulogo{
 	margin-left:5px;
 	}
-	#collegeof{
-    font-size:.6em;
-    }
-	#liberalarts{
-    font-size:1.5em;
-    }
-	#headcoursetitle {
-	margin-left:1em;
-	}
-
-	#headcoursetitle h2{
-    display:block;
-    font-size:1.3em;
-    }
+	
     
-    #portal-column-content{
-    background-color:#ffffff; 
-    width:76%;
-    }
+       #portal-column-content{
+       background-color:#ffffff; 
+       width:76%;
+       }
     
     #portal-column-one{
     width:20%;
     }
-}/*END WIDTH 800PX*/
+
+    #portal-searchbox{
+    	display:none;
+	}
+	
+	div.row #portal-searchbox {
+    	display: none !important;
+	}
+
+}/*END WIDTH 900PX*/
 	
 
 
@@ -86,7 +90,7 @@
    		height: auto;
     	width: 100%;
 	}
-
+	
 	#psulogo{
     	width:100px;
     	margin-left:10px;
@@ -101,8 +105,8 @@
 	}
 
 	#portal-column-one {
-		background-color: #AC5867;
-    	border: 1px solid #AC5867;    
+		background-color: #660000;
+    	border: 1px solid #660000;    
     	-webkit-border-radius: 10px;
     	-moz-border-radius: 10px;
     	border-radius: 10px;
@@ -112,11 +116,11 @@
 	}
 
 	.portletNavigationTree .portletHeader{
-    	background-color:#AC5867;
+    	background-color:#660000;
    		border:none;
-   		-webkit-border-radius: 10px 10px 10px 10px;
-    	-moz-border-radius: 10px 10px 10px 10px;
-    	border-radius: 10px 10px 10px 10px;
+   		-webkit-border-radius: 5px 5px 5px 5px;
+    	-moz-border-radius: 5px 5px 5px 5px;
+    	border-radius: 5px 5px 5px 5px;
     }
 
 	dl.portletNavigationTree dd.portletItem {
