Fix jquery document load. Fix for AD35 search box when display:none;. Editors-portlet font size.

--- a/plonetheme/simplecolor/skins/plonetheme_simplecolor_styles/mediaqueries.css
+++ b/plonetheme/simplecolor/skins/plonetheme_simplecolor_styles/mediaqueries.css
@@ -149,6 +149,10 @@
 	#portal-searchbox{
     	display:none;
 	}
+	
+	div.row #portal-searchbox {
+    	display: none !important;
+	}
 
 	#headcoursetitle {
 		clear:both;
