--- a/plonetheme/simplecolor/skins/plonetheme_simplecolor_styles/mediaqueries.css
+++ b/plonetheme/simplecolor/skins/plonetheme_simplecolor_styles/mediaqueries.css
@@ -5,9 +5,7 @@
 
 /* 1. Max width 1000px */
 @media only screen and (max-device-width: 1000px), (max-width: 1000px) {
-    #headcoursetitle h1{       
-        font-size:1.4em;
-        }
+   
         
     #headcoursetitle {
 	margin-left:1.5em;
@@ -25,25 +23,22 @@
 /* 2. Max width 900px */
 @media only screen and (max-device-width: 900px), (max-width: 900px) {
 
-        #portal-top{
-        background-image:none;
-	}
+       
 
 	#headcoursetitle {
 	margin-left:2em;
 	}
 
-	#headcoursetitle h1{       
-        font-size:1.5em;
-        }
+	
 	
 	#titlebox{
+        background-image:none;
 	width:100%;
 	margin-bottom:3px;
 	}
 	
        #psulogo{
-	margin-left:5px;
+	margin-left:10px;
 	}
 	
     
@@ -51,10 +46,6 @@
        background-color:#ffffff; 
        width:76%;
        }
-    
-    #portal-column-one{
-    width:20%;
-    }
 
     #portal-searchbox{
     	display:none;
@@ -78,7 +69,7 @@
 
 	#portal-top{
     	background-image:none;
-    	border-width:1px;
+    	border-width:0px;
 	}
 
 	#portal-header{
@@ -87,7 +78,7 @@
 
 	#titlebox {
     	display:block;
-   		height: auto;
+   	height: auto;
     	width: 100%;
 	}
 	
@@ -105,20 +96,21 @@
 	}
 
 	#portal-column-one {
-		background-color: #660000;
-    	border: 1px solid #660000;    
+	background-color: #074C76;
+    	border: 1px solid #074C76;    
     	-webkit-border-radius: 10px;
     	-moz-border-radius: 10px;
     	border-radius: 10px;
     	float: none;
-   		margin: 0 0 1em 0;
+   	margin: 0 0 1em 0;
     	width: 100%;
 	}
 
 	.portletNavigationTree .portletHeader{
-    	background-color:#660000;
-   		border:none;
-   		-webkit-border-radius: 5px 5px 5px 5px;
+    	background-color:#074C76;
+        color:#ffffff;
+   	border:none;
+   	-webkit-border-radius: 5px 5px 5px 5px;
     	-moz-border-radius: 5px 5px 5px 5px;
     	border-radius: 5px 5px 5px 5px;
     	cursor:pointer;
@@ -184,5 +176,10 @@
     
     .portlet-editors{
         display:none;
-        }
+    }
+        
+    div.managePortletsLink{
+        display:none;
+	}
+	
 }/*END WIDTH 600PX*/
